--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "token": "NDc0NDAyMzM3ODY4MzQ5NDcw.XUPNjQ.kItbX3gRGBoHjA8D5_g5kXkR4W8",
-  "prefix": "mass!",
+  "prefix": "re!",
   "id": "625877119989186570",
   "wait": "1"
 }
