--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "dm-allv2",
-  "version": "2.0.1",
+  "name": "!NoVa!",
+  "version": "1.0.0",
   "description": "A bot to send DM's to every user in a Discord server.",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Gringo, Scammer ALT, V3rmillion.net + Alex",
+  "author": "Ronak0020",
   "license": "ISC",
   "dependencies": {
     "colors": "^1.3.1",
